--- a/curso-trypescript/package.json
+++ b/curso-trypescript/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/lodash": "^4.14.183",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "eslint": "^8.21.0",
@@ -18,5 +19,10 @@
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "@types/validator": "^13.7.5",
+    "lodash": "^4.17.21",
+    "validator": "^13.7.0"
   }
 }
