--- a/curso-design-pattern-trypescript/package.json
+++ b/curso-design-pattern-trypescript/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^18.7.14",
     "@types/validator": "^13.7.6",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
